--- a/front-tourist-activities/index.html
+++ b/front-tourist-activities/index.html
@@ -1,15 +1,22 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto final CEI: Calendario de Actividades en Villajoyosa</title>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
-  </head>
-  <body class="Body">
-    <div class="Root" id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Proyecto final CEI: Calendario de Actividades en Villajoyosa</title>
+  <meta name="author" content="Jaume Esquerdo Ramis" />
+  <meta name="description"
+    content="Aplicación interactiva para consultar y gestionar actividades en Villajoyosa. Proyecto final del Máster de diseño web 'Fullstack' en CEI." />
+  <meta name="keywords" content="Villajoyosa, actividades, calendario, CEI, proyecto final, diseño web, fullstack, react, node, mongodb, mongoose" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
+</head>
+
+<body class="Body">
+  <div class="Root" id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
