--- a/front-tourist-activities/index.html
+++ b/front-tourist-activities/index.html
@@ -12,6 +12,9 @@
   <meta name="keywords" content="Villajoyosa, actividades, calendario, CEI, proyecto final, diseño web, fullstack, react, node, mongodb, mongoose" />
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
+
+  <link rel="icon" type="image/png" href="/favicon.svg" />
+
 </head>
 
 <body class="Body">
