--- a/front-tourist-activities/index.html
+++ b/front-tourist-activities/index.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
 
-  <link rel="icon" type="image/png" href="/favicon.svg" />
+  <link rel="icon" type="image/png" href="/img/favicon.svg" />
 
 </head>
 
