--- a/front-tourist-activities/index.html
+++ b/front-tourist-activities/index.html
@@ -9,9 +9,13 @@
   <meta name="author" content="Jaume Esquerdo Ramis" />
   <meta name="description"
     content="Aplicación interactiva para consultar y gestionar actividades en Villajoyosa. Proyecto final del Máster de diseño web 'Fullstack' en CEI." />
-  <meta name="keywords" content="Villajoyosa, actividades, calendario, CEI, proyecto final, diseño web, fullstack, react, node, mongodb, mongoose" />
+  <meta name="keywords"
+    content="Villajoyosa, actividades, calendario, CEI, proyecto final, diseño web, fullstack, react, node, mongodb, mongoose" />
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@700&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&family=Quicksand:wght@700&family=Playfair+Display:wght@400;500;600;700&display=swap"
+    rel="stylesheet">
 
   <link rel="icon" type="image/png" href="/img/favicon.svg" />
 
