añadir en index.html principal links de preload de imgs importantes

--- a/front-tourist-activities/index.html
+++ b/front-tourist-activities/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,6 +13,17 @@
       name="keywords"
       content="Villajoyosa, actividades, calendario, CEI, proyecto final, diseño web, fullstack, react, node, mongodb, mongoose"
     />
+
+    <!-- precarga de imgs importantes -->
+    <link rel="preload" as="image" href="/img/pack-recom/cultural.svg" />
+    <link rel="preload" as="image" href="/img/pack-recom/deporte.svg" />
+    <link rel="preload" as="image" href="/img/pack-recom/gastronomia.svg" />
+    <link rel="preload" as="image" href="/img/pack-recom/naturaleza.svg" />
+    <link rel="preload" as="image" href="/img/pack-recom/ocio.svg" />
+    <link rel="preload" as="image" href="/img/pack-recom/playa.svg" />
+    <link rel="preload" as="image" href="/img/bycicle.webp" />
+    <link rel="preload" as="image" href="/img/map.webp" />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap"
       rel="stylesheet"
